changes in jenkins

--- a/install_jenkins.yml
+++ b/install_jenkins.yml
@@ -58,3 +58,13 @@
         name: ec2-user
         groups: docker
         append: yes
+    - name: Add jenkins user to the docker group
+      user:
+        name: jenkins
+        groups: docker
+        append: yes
+
+    - name: Restart Jenkins to apply group changes
+      service:
+        name: jenkins
+        state: restarted
